welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: ambiguous reference to overloaded definition,
both method hunt in class SlugSnail of type (c: java.awt.Color)Unit
and  method hunt in class SlugSnail of type (c: java.awt.Color)Unit
match argument types (java.awt.Color)
		hunt(getParam(0).asInstanceOf[Color]); 
                ^SlugSnail:6: error: method hunt is defined twice
  conflicting symbols both originated in file 'plm.runtime1.SlugSnail'
def hunt(c:Color) {
    ^