welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     // Write your code here
 }

def hunt(c:Color) {
  while (estSurBiscuit()==false) {
    if (isFacingTrail(c)==true) {
      avance();
      baisseBrosse();
      leveBrosse();
    } else {
      gauche();
    }
  }
  prendBiscuit();
}

def isFacingTrail(c:Color):Boolean = {
  if (estFaceMur()==true) {
    return false;
  } else {
    avance();
    if (getCouleurSol()==c) {
      recule()
      return true;
    } else {
      recule()
      return false;
    }
  }
}